CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(SERVER_INCLUDE_DIR
        "${CMAKE_SOURCE_DIR}/game/NFGameCommon"
        "${CMAKE_SOURCE_DIR}/game/NFGameCommon/RecastNavigation")

include_directories( ${INCLUDE_DIR} ${SERVER_INCLUDE_DIR})

ADD_SUBDIRECTORY("NFGameCommon")
ADD_SUBDIRECTORY("MMO")
ADD_SUBDIRECTORY("Fish")


