CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(NFLogicServerPlayerPlugin)

include_directories( ${INCLUDE_DIR} "./")

AUX_SOURCE_DIRECTORY(. SRC)
AUX_SOURCE_DIRECTORY(./Login SRC)
AUX_SOURCE_DIRECTORY(./GM SRC)
AUX_SOURCE_DIRECTORY(./Player SRC)
AUX_SOURCE_DIRECTORY(./Base SRC)
AUX_SOURCE_DIRECTORY(./Trans SRC)
AUX_SOURCE_DIRECTORY(./Part SRC)
AUX_SOURCE_DIRECTORY(./Part/Package SRC)
AUX_SOURCE_DIRECTORY(./Part/Item SRC)

if (CMAKE_BUILD_TYPE STREQUAL "Release")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Build/Lib/Release")
	ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC} )
elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Build/Lib/Debug")
	ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SRC} )
elseif (CMAKE_BUILD_TYPE STREQUAL "DynamicRelease")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Install/Bin/Dynamic_Release")
	ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SRC} )
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} NFServerMessage NFServerCommon NFServerLogicMessage NFLogicCommon)
elseif(CMAKE_BUILD_TYPE STREQUAL "DynamicDebug")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
	SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/Install/Bin/Dynamic_Debug")
	ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SRC} )
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} NFServerMessage NFServerCommon NFServerLogicMessage NFLogicCommon)
endif()

